# claim-flow-engine

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dummy.csv  imageresize.py  mypy.ini  notes.txt  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ClaimFlowEngine/data/: prepare_ml_claims.py
app/: main.py  schemas.py
app/router/: route_router.py
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
claimflowengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
claimflowengine/clustering/: __init__.py  cluster.py  cluster_root_causes.py  cluster_summary.py  clustering_pipeline.py  embed.py  label_clusters.py  root_cause_cluster.py
config/: config.yaml
logs/: experiments.csv
models/: cluster_model.joblib  denial_prediction_model.joblib  numeric_transformer.joblib  reducer_model.joblib  target_encoder.joblib
scripts/: balance_claims.py  cluster_denials.py  combine_predictions_and_clusters.py  commands.txt  debug_model_memorization.py  label_clusters.py  plot_umap_clusters.py  predict_denials.py  prepare_ml_claims.py  run_routing_policy.py  simulate_routing.py  train_denial_benchmark.py  train_denial_predictor.py  train_model.py
tests/: conftest.py  test_build_features.py  test_cluster_root_causes.py  test_features.py  test_main.py  test_ping.py  test_policy_engine.py  test_postprocessing.py  test_rules.py  test_schemas.py  test_train.py
(+37 files in other folders)
