[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimflowengine"
version = "0.1.0"
description = "ML pipeline for healthcare claim denial prediction and workflow routing"
authors = [
    { name = "Claim Flow Engine Project", email = "your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "pyyaml>=6.0",
    "joblib>=1.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claimflowengine*"]
